# Games

AIchess/: README.md  pyproject.toml
AIchess/src/chess/: SmartMoveFinder.py
AIchess/src/chess.egg-info/: PKG-INFO  SOURCES.txt
chess/: ChessMain.py
chess/src/chess/: ChessEngine.py
